# Wof

./: .gitignore  Ball.cpp  Ball.h  CMakeLists.txt  CollisionManager.cpp  Countdown.cpp  Countdown.h  Entity.cpp  Entity.h  GameState.cpp  GameState.h  MainGame.cpp  MainGame.h  MainMenu.cpp  Makefile  Player.cpp  Player.h  Score.cpp  TODO.TODO  doxCFG  index.html  main.cpp  testing  wof
SFML-2.5.0/examples/ftp/: Ftp.cpp
SFML-2.5.0/examples/island/: Island.cpp
SFML-2.5.0/examples/joystick/: Joystick.cpp
SFML-2.5.0/examples/opengl/: OpenGL.cpp
SFML-2.5.0/examples/pong/: Pong.cpp
SFML-2.5.0/examples/shader/: Effect.hpp  Shader.cpp
SFML-2.5.0/examples/sockets/: Sockets.cpp  TCP.cpp  UDP.cpp
SFML-2.5.0/examples/sound/: Sound.cpp
SFML-2.5.0/examples/sound-capture/: SoundCapture.cpp
SFML-2.5.0/examples/voip/: Client.cpp  Server.cpp  VoIP.cpp
SFML-2.5.0/examples/win32/: Win32.cpp
SFML-2.5.0/examples/window/: Window.cpp
SFML-2.5.0/include/SFML/: Audio.hpp  Graphics.hpp  Main.hpp  Network.hpp  System.hpp  Window.hpp
SFML-2.5.0/include/SFML/Audio/: AlResource.hpp  Export.hpp  InputSoundFile.hpp  Listener.hpp  Music.hpp  OutputSoundFile.hpp  Sound.hpp  SoundBuffer.hpp  SoundBufferRecorder.hpp  SoundFileFactory.hpp  SoundFileFactory.inl  SoundFileReader.hpp  SoundFileWriter.hpp  SoundRecorder.hpp  SoundSource.hpp  SoundStream.hpp
SFML-2.5.0/include/SFML/Graphics/: BlendMode.hpp  CircleShape.hpp  Color.hpp  ConvexShape.hpp  Drawable.hpp  Export.hpp  Font.hpp  Glsl.hpp  Glyph.hpp  Image.hpp  Rect.hpp  RectangleShape.hpp  RenderStates.hpp  RenderTarget.hpp  RenderTexture.hpp  RenderWindow.hpp  Shader.hpp  Shape.hpp  Sprite.hpp  Text.hpp  Texture.hpp  Transform.hpp  Transformable.hpp  Vertex.hpp  VertexArray.hpp  VertexBuffer.hpp  View.hpp
SFML-2.5.0/include/SFML/Network/: Export.hpp  Ftp.hpp  Http.hpp  IpAddress.hpp  Packet.hpp  Socket.hpp  SocketHandle.hpp  SocketSelector.hpp  TcpListener.hpp  TcpSocket.hpp  UdpSocket.hpp
SFML-2.5.0/include/SFML/System/: Clock.hpp  Err.hpp  Export.hpp  FileInputStream.hpp  InputStream.hpp  Lock.hpp  MemoryInputStream.hpp  Mutex.hpp  NativeActivity.hpp  NonCopyable.hpp  Sleep.hpp  String.hpp  Thread.hpp  ThreadLocal.hpp  ThreadLocalPtr.hpp  Time.hpp  Utf.hpp
SFML-2.5.0/include/SFML/Window/: Clipboard.hpp  Context.hpp  Cursor.hpp  Event.hpp  Export.hpp  GlResource.hpp  Joystick.hpp  Keyboard.hpp  Mouse.hpp  Sensor.hpp  Touch.hpp  VideoMode.hpp  Window.hpp  WindowHandle.hpp
cfg/: cfg.ini
doc/html/: graph_legend.html  index.html
include/: Ball.h  CollisionManager.h  Countdown.h  DogSelector.h  GameState.h  MainGame.h  MainMenu.h  Player.h  Score.h  Selector.h  Settings.h
src/: CollisionManager.cpp  Countdown.cpp  Entity.cpp  MainGame.cpp  main.cpp
src/Entities/: Ball.cpp  Entity.cpp  Player.cpp
src/States/: MainGame.cpp  MainMenu.cpp  Settings.cpp
src/UI/: DogSelector.cpp  Score.cpp  Selector.cpp
